# R-AI-OS

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  SECURITY.md  SIGMAP.md  docker-compose.yml  errors.txt  errors4.txt  gen-context.config.json  gitrepo.md  install-system.ps1  install.sh  memory.md  raios-policy.toml  rust-toolchain.toml  status_report_v080.md
.cargo/: audit.toml
.claude/: settings.json
.github/: copilot-instructions.md
code/: .gitignore  Cargo.toml  README.md  SIGNATURES.md  errors2.txt  errors3.txt  gen-context.config.json  gitrepo.md  (+1 more)
crates/raios-contracts/: Cargo.toml
crates/raios-contracts/src/: anka.rs  command.rs  dto.rs  event.rs  factory.rs  lib.rs  problem.rs  query.rs  snapshot.rs
crates/raios-core/: Cargo.toml
crates/raios-core/src/: anka.rs  config.rs  control_plane.rs  entities.rs  lib.rs  lock_manager.rs  mempalace.rs  safe_io.rs  shield.rs
crates/raios-core/src/core/: audit.rs  disk.rs  git.rs
crates/raios-core/src/core/process/: command.rs  kill.rs  mod.rs  ports.rs
crates/raios-core/src/core/version/: changelog.rs  mod.rs  semver.rs  types.rs
crates/raios-core/src/db/: agent_stats.rs  budget_gate.rs  control_plane.rs  factory_cycles.rs  factory_evidence.rs  factory_intake.rs  factory_policies.rs  factory_products.rs  factory_releases.rs  factory_requirements.rs  factory_support.rs  health.rs  inbox_risk.rs  mem.rs  mod.rs  projects.rs  provider.rs  scheduler.rs  schema.rs  tasks.rs  tool_traces.rs  wf_file_change.rs  wf_handoff.rs  wf_sessions.rs  wf_swarm.rs  wf_task_graph.rs
crates/raios-core/src/db/tests/: agent_stats.rs  control_plane.rs  db_path.rs  factory.rs  handoff.rs  integration.rs  mem.rs  mod.rs  schema.rs  tasks.rs  tool_traces.rs
crates/raios-core/src/product_factory/: charter.rs  errors.rs  impact.rs  intake.rs  mod.rs  policy.rs  quality.rs  state_machine.rs  types.rs
crates/raios-core/src/security/: audit.rs  auth.rs  capabilities.rs  egress.rs  file_perms.rs  hooks.rs  license.rs  mod.rs  patterns.rs  policy.rs  policy_suggest.rs  quarantine.rs  rate_limiter.rs  sandbox.rs  scanner.rs  secret_scan.rs  tool_pin.rs  umai.rs  verify_chain.rs
crates/raios-core/src/task_graph/: dag.rs  store.rs  tests.rs  types.rs
crates/raios-runtime/: Cargo.toml
crates/raios-runtime/src/: agent_runner.rs  agent_wrapper.rs  anka.rs  compliance.rs  constitution.rs  discovery.rs  factory.rs  health.rs  job_executor.rs  kernel.rs  lib.rs  new_project.rs  proxy_store.rs  radar.rs  refactor_scan.rs  session.rs  session_canvas.rs  session_memory.rs  session_review.rs  tasks.rs  trace_recall.rs  workers.rs
crates/raios-runtime/src/cli/: preflight.rs
crates/raios-runtime/src/control_plane/: mod.rs  service.rs
crates/raios-runtime/src/cortex/: embedder.rs  mod.rs  store.rs
crates/raios-runtime/src/daemon/: cortex.rs  git.rs  handlers.rs  health.rs  lifecycle.rs  mod.rs  proxy.rs  scheduler.rs  server.rs  state.rs
crates/raios-runtime/src/daemon/cmd/: capability.rs  evolution.rs  file.rs  jobs.rs  mod.rs  swarm.rs  task_graph.rs
crates/raios-runtime/src/filebrowser/: agents.rs  files.rs  git.rs  mod.rs
crates/raios-runtime/src/intelligence/: edge.rs  evolution.rs  mod.rs  router.rs
crates/raios-runtime/src/product_factory/: artifact_store.rs  gates.rs  ingest.rs  maintenance.rs  mod.rs  orchestrator.rs  planner.rs  service.rs
crates/raios-runtime/src/product_factory/adapters/: build.rs  mod.rs  project.rs  research.rs  store.rs  support.rs
crates/raios-runtime/src/search/: hybrid.rs  indexer.rs  mod.rs  trigram.rs
crates/raios-runtime/src/sentinel/: tester.rs
crates/raios-runtime/src/server/http/: a2a.rs  auth.rs  mod.rs  routes.rs
crates/raios-runtime/src/session_memory/: distillation.rs  heuristics.rs  mod.rs  transcript_io.rs
crates/raios-runtime/src/swarm/: merge.rs  mod.rs  store.rs  worktree.rs
crates/raios-runtime/src/system_scan/: db_budget.rs  doctor.rs  mod.rs  tools.rs  usage.rs
crates/raios-surface-cli/: Cargo.toml
crates/raios-surface-cli/src/: lib.rs
crates/raios-surface-cli/src/cli/: action_types.rs  agent_stats.rs  agent_wrapper.rs  anka.rs  args.rs  audit.rs  cron.rs  dev.rs  factory.rs  git.rs  grep.rs  handoff.rs  health.rs  hub.rs  instinct.rs  locate.rs  mem.rs  mod.rs  new.rs  policy.rs  refactor.rs  reflect.rs  search.rs  session.rs  swarm.rs  task_update.rs  trace.rs  version.rs  workspace.rs
crates/raios-surface-cli/src/cli/ext/: discover.rs  mod.rs  run.rs  schedule.rs
crates/raios-surface-cli/src/cli/security/: audit.rs  infra.rs  mod.rs  owasp.rs
crates/raios-surface-mcp/: Cargo.toml
crates/raios-surface-mcp/src/: lib.rs
crates/raios-surface-mcp/src/mcp/: mod.rs  resources.rs  tools.rs  tools_dev.rs  tools_factory.rs  tools_git.rs  tools_swarm.rs  tools_workspace.rs
crates/raios-surface-tui/: Cargo.toml
crates/raios-surface-tui/src/: lib.rs
crates/raios-surface-tui/src/app/: client.rs  control_navigation.rs  editor.rs  intent.rs  ipc.rs  ipc_events.rs  ipc_support.rs  mod.rs  reducer.rs  route.rs  services.rs  state.rs  store.rs
crates/raios-surface-tui/src/app/events/: actions.rs  bg_messages.rs  commands.rs  ext_actions.rs  helpers.rs  mod.rs  mouse.rs
crates/raios-surface-tui/src/app/events/keyboard/: dashboard.rs  editor.rs  health.rs  mod.rs  project.rs  setup.rs
crates/raios-surface-tui/src/setup_wizard/: exec.rs  mod.rs  templates.rs  types.rs
crates/raios-surface-tui/src/ui/: components.rs  filebrowser.rs  health.rs  mempalace.rs  mod.rs  projects.rs  search.rs  sentinel.rs
crates/raios-surface-tui/src/ui/panels/: agents.rs  constitution.rs  content.rs  dashboard_main.rs  extensions.rs  git_diff.rs  header.rs  help.rs  inbox.rs  logs.rs  menu.rs  mod.rs  policies.rs  recent.rs  rules.rs  scheduler.rs  stats.rs  tasks.rs  timeline.rs
crates/raios-surface-tui/src/ui/routes/: explore.rs  govern.rs  mod.rs  now.rs  tests.rs  work.rs
crates/raios-surface-tui/src/ui/setup/: mod.rs
crates/raios-surface-tui/src/ui/setup/steps/: action.rs  info.rs  mod.rs
src/: db.rs  (+43 more)
(+369 files in other folders)
