[package]
name = "r-ai-os"
version = "1.3.0"
edition = "2021"
authors = ["alazndy <goktugturhan74@gmail.com>"]
description = "AI OS Terminal Control Center — Rust Edition"
license = "MIT"

[[bin]]
name = "raios"
path = "src/bin/raios.rs"

[[bin]]
name = "aiosd"
path = "src/bin/aiosd.rs"

[lib]
name = "r_ai_os"
path = "src/lib.rs"


[dependencies]
ratatui = "0.29"
crossterm = "0.28"
walkdir = "2"
dirs = "5"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
notify = "6.1.1"
notify-rust = "4"
fd-lock = "4.0.2"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
regex-lite = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
which = "6"
# Cortex / Vector Engine — optional (enable with --features cortex)
fastembed = { version = "3", features = ["online"], optional = true }
instant-distance = "0.6"

[features]
cortex = ["fastembed"]

[dev-dependencies]
tempfile = "3"
