[package]
name = "raios-contracts"
version = "3.7.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Serialization-only DTOs, Queries, Commands, Events, Problems, and Snapshots for R-AI-OS Control Plane"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
