[package]
name = "raios-core"
version = "3.2.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
rusqlite = { version = "0.31", features = ["bundled"] }
anyhow = "1"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
regex-lite = "0.1"
regex = "1.10"
fd-lock = "4.0.2"
dirs = "5"
which = "6"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
walkdir = "2"
url = "2"

[dev-dependencies]
tempfile = "3"
