[package]
name = "raios-runtime"
version = "3.2.0"
edition = "2021"

[dependencies]
raios-core = { path = "../raios-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
anyhow = "1"
tokio = { version = "1", features = ["full"] }
notify = "6.1.1"
notify-rust = "4"
which = "6"
base64 = "0.22"
sha2 = "0.10"
regex = "1.10"
dirs = "5"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
fastembed = { version = "3", features = ["online"], optional = true }
ort-sys = { version = "=2.0.0-rc.4", optional = true }
hf-hub = { version = "0.4.0", optional = true }
instant-distance = "0.6"
axum = { version = "0.7", features = ["ws"] }
walkdir = "2"
shlex = "1"

[features]
default = ["cortex"]
# Forwards to raios-core/cortex so DaemonConfig::startup_cortex_indexing
# (computed in raios-core via cfg!(feature = "cortex")) actually reflects
# whether real embeddings are compiled in here — cfg checks don't cross
# crate boundaries on their own, so this has to be explicit.
cortex = ["fastembed", "ort-sys", "hf-hub", "raios-core/cortex"]

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
