[package]
name = "raios-surface-mcp"
version = "3.3.0"
edition = "2021"

[dependencies]
raios-core = { path = "../raios-core" }
raios-runtime = { path = "../raios-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
