[package]
name = "raios-surface-tui"
version = "3.6.0"
edition = "2021"

[dependencies]
raios-core = { path = "../raios-core" }
raios-runtime = { path = "../raios-runtime" }
raios-contracts = { path = "../raios-contracts" }
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tokio = { version = "1", features = ["full"] }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.23.1", features = ["v4", "serde"] }
dirs = "5"
notify = "6.1.1"

[dev-dependencies]
tempfile = "3"
